# ucf

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md
packaging/: PKGBUILD  ucf-0.1.4.ebuild
src/: args.rs  lib.rs  main.rs  main.rs.bak
