[package]
name = "ucf"
version = "0.1.0"
edition = "2021"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
description  = "A universal code formatter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.26", features = ["derive"]}
