[package]
name = "ucf"
version = "0.1.5"
edition = "2021"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
description  = "A universal code formatter"
license = "MIT"
repository = "https://github.com/berinaniesh/ucf.git"
keywords = ["formatting"]
categories = ["development-tools", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
serde = "1.0.152"
serde_derive = "1.0.152"
